--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,19 @@
+mtd:
+  services:
+    - id: 3213a31c-59de-4e14-7648-e9508216e4bc
+      entry_ip: 192.168.1.1
+      entry_port: 8080
+      service_ip: 10.0.1.2
+      service_port: 80
+    - id: 1233a31c-59de-4e14-7648-e9508216e4bc
+      entry_ip: 192.168.1.3
+      entry_port: 8081
+      service_ip: 10.0.1.4
+      service_port: 81
+
 aws:
   regions: 
     - us-east-1
-    - us-east-2
+#    - us-east-2
     - us-west-1
   credentials_path: ./mtd_aws/.credentials
